# finalproject_magomedov_M25-555

./: .env.local  .gitignore  Makefile  README.md  config.json  demo_singleton.py  main.py  pyproject.toml
demos/: main-demo.cast  update-rates-demo.cast
valutatrade_hub/: __init__.py
valutatrade_hub/cli/: __init__.py  interface.py
valutatrade_hub/core/: currencies.py  decorators.py  exceptions.py  models.py  services.py  usecases.py
valutatrade_hub/infra/: __init__.py  database.py  logging_config.py  settings.py
valutatrade_hub/parser_service/: __init__.py  api_clients.py  config.py  scheduler.py  storage.py  updater.py
